fixed numbers/strings align, bold font in summary

--- a/source/css/LightPivot.css
+++ b/source/css/LightPivot.css
@@ -8,6 +8,10 @@
     overflow: hidden;
 }
 
+.lpt .formatLeft {
+    text-align: left;
+}
+
 .lpt .central {
     position: absolute;
     left: 0;
